header layout done

--- a/index.html
+++ b/index.html
@@ -8,11 +8,73 @@
     </head>
     <body>
         <header>
+            <div class="header_small">
+                <div class="header_small_title">
+                    <h1>Header Logo</h1>
+                </div>
 
+                <ul class="header_small_list">
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+            </ul>
+                
+            </div>
+
+            <div class="header_big">
+                <div class="header_big_left">
+                    <p class="header_big_title">This website is awesome like you :)</p>
+                    <p class="header_big_text">Lorem Ipsum is simply dummy text of the printing and typesetting 
+                        industry.Lorem Ipsum has been the industry's standard dummy text ever since the 
+                        1500s, when an unknown printer took a galley of type and scrambled it to make a type 
+                        specimen book. It has survived not only five centuries, but also the leap into 
+                        electronic typesetting, remaining essentially unchanged. It was popularised in the 
+                        1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more 
+                        recently with desktop publishing software like Aldus PageMaker including versions of 
+                        Lorem Ipsum.</p>
+                    <button class="header_button">Sign up</button>
+                </div>
+
+                <div class="header_big_right">
+                    this is a placeholder for an image
+                </div>
+            </div>
         </header>
 
+        <div class="info">
+            <p class="info_title">Some random information</p>
+
+            <div class="cards">
+                <div class="card">
+
+                </div>
+                <div class="card">
+
+                </div>
+                <div class="card">
+
+                </div>
+                <div class="card">
+
+                </div>
+            </div>
+        </div>
+
+        <div class="quote">
+            <p class="qoute_text">No siema</p>
+            <p class="qoute_author">-Ja, Giga Kox</p>
+        </div>
+
+        <div class="sign_up">
+            <div class="sign_up_text">
+                <p class="sign_up_header">Call to action! It's time!</p>
+                <p class="sign_up_content">Halo</p>
+            </div>
+            <button>Sign up</button>
+        </div>
+
         <footer>
-            
+            <p>Copyright &copy; Marcin Lesniak 2022</p>
         </footer>
     </body>
 </html>
