--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 </div>
 
                 <ul class="header_small_list">
-                    <li><a href="#">header link one</a></li>
-                    <li><a href="#">header link two</a></li>
-                    <li><a href="#">header link three</a></li>
+                    <li><a href="https://www.google.com" target="_blank">header link one</a></li>
+                    <li><a href="https://www.google.com" target="_blank">header link two</a></li>
+                    <li><a href="https://www.google.com" target="_blank">header link three</a></li>
             </ul>
                 
             </div>
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="header_big_right">
-                    this is a placeholder for an image
+                    <img src="./img/img2.jpg" alt="photo of NYC">
                 </div>
             </div>
         </header>
@@ -46,31 +46,60 @@
 
             <div class="cards">
                 <div class="card">
-
+                    <div class="image">
+                        <a href="https://en.wikipedia.org/wiki/New_York_City" target="_blank">
+                            <img src="./img/img1.jpg" alt="NYC - image">
+                        </a>
+                    </div>
+                    <p class="text">
+                        This is some random tex under image. OK? OK.
+                    </p>
                 </div>
                 <div class="card">
-
+                    <div class="image">
+                        <a href="https://en.wikipedia.org/wiki/New_York_City" target="_blank">
+                            <img src="./img/img1.jpg" alt="NYC - image">
+                        </a>
+                    </div>
+                    <p class="text">
+                        This is some random tex under image. OK? OK.
+                    </p>
                 </div>
                 <div class="card">
-
+                    <div class="image">
+                        <a href="https://en.wikipedia.org/wiki/New_York_City" target="_blank">
+                            <img src="./img/img1.jpg" alt="NYC - image">
+                        </a>
+                    </div>
+                    <p class="text">
+                        This is some random tex under image. OK? OK.
+                    </p>
                 </div>
                 <div class="card">
-
+                    <div class="image">
+                        <a href="https://en.wikipedia.org/wiki/New_York_City" target="_blank">
+                            <img src="./img/img1.jpg" alt="NYC - image">
+                        </a>
+                    </div>
+                    <p class="text">
+                        This is some random tex under image. OK? OK.
+                    </p>
                 </div>
             </div>
         </div>
 
         <div class="quote">
-            <p class="qoute_text">No siema</p>
-            <p class="qoute_author">-Ja, Giga Kox</p>
+            <p class="quote_text">If I were not a physicist, I would probably be a musician. 
+                I often think in music. I live my daydreams in music. I see my life in terms of music.</p>
+            <p class="quote_author">-Albert Einstein</p>
         </div>
 
         <div class="sign_up">
             <div class="sign_up_text">
                 <p class="sign_up_header">Call to action! It's time!</p>
-                <p class="sign_up_content">Halo</p>
+                <p class="sign_up_content">Sign up for our product by clicking that button right over there!</p>
             </div>
-            <button>Sign up</button>
+            <button class="sign_up_button">Sign up</button>
         </div>
 
         <footer>
